Bug 158252 - FILESAVE XLSX Line breaks in cells disappear
Summary: FILESAVE XLSX Line breaks in cells disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:25.2.0 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XLSX
  Show dependency treegraph
 
Reported: 2023-11-17 06:40 UTC by Aron Budea
Modified: 2025-07-20 02:38 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODS (8.78 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-11-17 06:42 UTC, Aron Budea
Details
Screenshot (15.39 KB, image/png)
2023-11-17 13:04 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2023-11-17 06:40:20 UTC
In a spreadsheet, add multiple lines, save it as XLSX (or save the attached ODS as XLSX), and reopen it.

=> No line breaks in cell.

Observed in LO 24.2.0.0.alpha0+ (c60a9db1f2a8e2a088c6b89bcdff4901b28f2864) / Linux.

It's a regression from the commit below. Since the same XLSX opens differently before or after this commit, it looks like the bug is on import side.
Adding CC: to Paris Oplopoios.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=16d43b7c5396d6382926d514dc9ce10b3ce94cba
author		Paris Oplopoios <paris.oplopoios@collabora.com>	2023-08-28 20:40:33 +0300
committer	Paris Oplopoios <parisoplop@gmail.com>	2023-08-28 22:12:43 +0200

Shared string shouldn't account preserve space property
Comment 1 Aron Budea 2023-11-17 06:42:00 UTC
Created attachment 190886 [details]
Sample ODS
Comment 2 m_a_riosv 2023-11-17 13:04:52 UTC
Created attachment 190891 [details]
Screenshot

For me the line breaks remain, and they are showed in the input line, but not in the cell. And cells saved with other versions opens fine.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5fe2bf914c251009ec4709fa8fdc45c3b53f676b
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Aron Budea 2023-11-20 09:37:21 UTC
(In reply to m.a.riosv from comment #2)
> And cells saved with other versions opens fine.
Good point, thanks! I looked further, and there's a second (or rather, first) part of this regression. If the XLSX was saved in a version before the below commit, then opening in a build after the commit in the description doesn't exhibit the bug, only if it was saved in a build after this commit (the changes seem related):

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1760ee4d328cfb6ba22a5b3c84016625b12adb25
author		Paris Oplopoios <paris.oplopoios@collabora.com>	2023-08-23 12:31:15 +0300
committer	Paris Oplopoios <parisoplop@gmail.com>	2023-08-28 10:27:37 +0200

sc: Fix wrapText not being applied correctly on export
Comment 4 Commit Notification 2023-11-23 15:13:55 UTC
offtkp committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17e362e56f9e15d0214c441e632c91d22e58519d

tdf#158252 sc: Enable text wrapping when inputting line breaks in cell

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Paris Oplopoios 2023-11-23 15:14:11 UTC
Please try after the patch I just pushed.
Comment 6 Mike Kaganski 2024-02-29 03:36:27 UTC
Possibly the change in commit 17e362e56f9e15d0214c441e632c91d22e58519d could be replaced by a code specific to export. That would fix bug 159690, too.
Comment 7 Mike Kaganski 2024-02-29 03:45:22 UTC
Ah - commit 1760ee4d328cfb6ba22a5b3c84016625b12adb25 explicitly dropped this from the export.
Comment 8 Commit Notification 2024-10-03 01:05:52 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dafb629f4f5739e326fdf6b3f072fe139ed27c3b

tdf#161453 tdf#158252 tdf#159690 Revert "sc: Fix wrapText ...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-10-03 11:29:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/be9e77ef1e1180e86b1669b4fb176713ac54a9ba

tdf#161453 tdf#158252 tdf#159690 Revert "sc: Fix wrapText ...

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-10-03 11:33:16 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55a8fce5d76bba0657ed76c85439fac8d1d00c8d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-03 14:07:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/a6bc95646b0b872375d710afbea953189d2a117a

tdf#161453 tdf#158252 tdf#159690 Revert "sc: Fix wrapText ...

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-10-03 21:42:44 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c1d2902b64dc02026f7842a43e540283b67df13d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-10-04 07:25:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/be818a6d53f9b5dfa0d23b807463b1c00d67800d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Telesto 2024-11-25 21:56:12 UTC
@Aron
Should the bug be REOPENED? The initial fix got reverted..
Comment 15 Justin L 2024-11-25 22:11:48 UTC
(In reply to Telesto from comment #14)
> @Aron
> Should the bug be REOPENED? The initial fix got reverted..

No - this bug report is about a regression. Both the original patch causing the regression (comment 3) and this bug's attempt to fix the regression (comment 4) were removed.